sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:14: error: type mismatch;
 found   : Double
 required: Int
   setValeur(ecart,v) 
             ^